@@ -6,7 +6,7 @@ Version: 1.2.2-beta
 Author: Edward Caissie
 Author URI: http://edwardcaissie.com/
 WordPress Required Version: 3.4
-WordPress Tested Version: 3.6.1
+WordPress Tested Version: 3.7
 Tags: black, white, gray, light, one-column, two-columns, three-columns, right-sidebar, flexible-width, custom-background, custom-header, custom-menu, featured-images, flexible-header, post-formats, sticky-post, threaded-comments
 Text Domain: opusprimus
 License: GNU General Public License v2
